--- a/src/main/resources/templates/setor/CadastroSetor.html
+++ b/src/main/resources/templates/setor/CadastroSetor.html
@@ -51,73 +51,20 @@
 				</div>
 
 
-				<input type="text" id="situacao" th:value="*{ativo}"/>				
-<!--  				<div class="row" style="display: none"> -->
- 				<div class="row">
-					<div class="col-sm-6  form-group">
-						<label>Status</label>
-						<div>
-							<th:block th:each="status : ${tipoAtivo}">
-								<div class="radio  radio-inline">
-									<input type="radio" th:id="|id_${status}|" th:value="${status}" th:field="*{ativo}" th:selected="${status.ATIVO}"> 
-									<label th:for="|id_${status}|" th:text="${status.descricao}"></label>
-								</div>
-							</th:block>
-						</div>
-					</div>
-				</div>
-				
+
 				<div class="row">
-					<div class="form-group  col-sm-3">
+					<input type="text" id="text-status" th:value="*{ativo}" th:name="ativo"/>
+									
+					<div class="form-group col-sm-3">
 						<input type="checkbox"
-							id="usuario-status" 
+							id="toggle-status" checked 
 							class="js-toggle"
-							data-toggle="toggle" 
 							data-on="ATIVO" 
 							data-off="INATIVO" 
 							data-onstyle="success" 
 							data-offstyle="danger"/>
 					</div>
 				</div>
- 				
-				
-<!-- 				
-				
-				<div class="row">
-					<div class="col-sm-12  form-group">
-						<label>Status</label>
-						<div>
-							<th:block th:each="status : ${tipoAtivo}">
-								<div class="radio  radio-inline">
-									<input th:id="|id_${status}|" type="radio" th:value="${status}" th:field="*{ativo}"> 
-									<label th:for="|id_${status}|" th:text="${status.descricao}">Nacional</label>
-								</div>
-							</th:block>
-						</div>
-					</div>
-				</div>
-				
-				<div class="row">
-					<div class="form-group  col-sm-3">
-						<label class="control-label">Status</label>
-						<div>
-							<input type="checkbox" checked="checked" class="js-status" data-size="normal" data-on-color="success" data-off-color="danger" data-on-text="Ativo" data-off-text="Inativo"/>
-						</div>
-					</div>				
-				</div>
-				
-				<div class="row">
-					<div class="form-group  col-sm-3">
-						<input type="checkbox" class="js-toggle" checked data-toggle="toggle" data-on="ATIVO" data-off="INATIVO" data-onstyle="success" data-offstyle="danger"/>
-					</div>
-				</div>
-	
-				<div class="row">
-					<div class="col-sm-6">
-						<button type="submit" class="btn btn-primary">Novo Setor</button>
-					</div>
-				</div>
- -->		
 				
 				<div class="row">
 					<div class="form-group col-sm-12">
@@ -132,55 +79,35 @@
 
 </section>	
 
-<!-- <th:block layout:fragment="javaScript-extra"> -->
-<!-- 	<script th:src="@{/js/setor.js}"></script> -->
-<!-- 	<script th:src="@{/js/bootstrap-switch.min.js}"></script> -->
-<!-- 	<script> -->
-// 		$('.js-status').bootstrapSwitch();
-<!-- 	</script> -->
-	
-<!-- 	<script th:src="@{/js/bootstrap-toggle.min.js}"></script> -->
-<!-- 	<script> -->
-// 	    $('.js-toggle').bootstrapToggle();
-<!-- 	</script> -->
-	
-	
-<!-- </th:block> -->
 
 <th:block layout:fragment="javaScript-extra">
 
-	<script th:src="@{/js/bootstrap-switch.min.js}"></script>
-
-	<script>
-		$('.js-ativo').bootstrapSwitch();
-	</script>
-	
 	<script th:src="@{/js/bootstrap-toggle.min.js}"></script>
 
 	<script>
-	    $('.js-toggle').bootstrapToggle();
-
-	    if ($('#situacao').prop('value')=='ATIVO'){
-    		$('#usuario-status').prop('checked');
-    	}else{
-    		$('#usuario-status').prop('unchecked');
-    	}
-	    	
-
-		$('#usuario-status').prop('checked', false);
-
+		var textStatus = $('#text-status');
+	    var toggleStatus = $('#toggle-status');
 	    
-	    $('#usuario-status').change(function() {
-	    	
-	    	if($(this).prop('checked')){
-	    		$('#id_ATIVO').prop('checked', true).change();
-	    		$('#situacao').prop('value', 'ATIVO');
-	    	}else{
-	    		$('#id_INATIVO').prop('checked', true).change()
-	    		$('#situacao').prop('value', 'INATIVO');
-	    	}
-	    	
+	    // Novos registros serão inicializados como ATIVO
+	    if (textStatus.val()==''){
+	    	textStatus.val('ATIVO');
+	    }
+
+	    // Valor inicial na aplicação (back-end)
+	    toggleStatus.bootstrapToggle((textStatus.val()=='ATIVO')? 'on' : 'off');
+	    
+	    // Alterar valor  
+	   	toggleStatus.change(function() {
+	   		
+	   		console.log('Status: ' + toggleStatus.prop('checked'));
+	   		if (toggleStatus.prop('checked')){
+	   			textStatus.val('ATIVO');
+	   		}else{
+	   			textStatus.val('INATIVO');
+	   		}
+	   		
 	      })
+	    
 	</script>
 		
 </th:block>
