--- a/src/main/resources/templates/setor/CadastroSetor.html
+++ b/src/main/resources/templates/setor/CadastroSetor.html
@@ -93,7 +93,7 @@
 	    	textStatus.val('ATIVO');
 	    }
 
-	    // Valor inicial na aplicação (back-end)
+	    // Inicializa o toggle com o valor inicial na aplicação (back-end)
 	    toggleStatus.bootstrapToggle((textStatus.val()=='ATIVO')? 'on' : 'off');
 	    
 	    // Alterar valor  
