--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -1,3 +1,25 @@
+$('.js-tooltip').tooltip();
+/* .js-tooltip { */
+/*     position: relative; */
+/*     display: inline-block; */
+/*     border-bottom: 1px dotted black; */
+/* } */
+
+/* .js-tooltip .js-tooltiptext { */
+/*     visibility: hidden; */
+/*     width: 120px; */
+/*     background-color: black; */
+/*     color: #fff; */
+/*     text-align: center; */
+/*     border-radius: 6px; */
+/*     padding: 5px 0; */
+
+/*     Position the tooltip */
+/*     position: absolute; */
+/*     z-index: 1; */
+/* } */
+
+
 .logotipo {
 	padding: 10px;
 	margin-right: 20px;
