Cadastro de Contas concluido

--- a/src/main/resources/templates/conta/CadastroConta.html
+++ b/src/main/resources/templates/conta/CadastroConta.html
@@ -17,12 +17,12 @@
 		<ol class="breadcrumb">
 			<li><a href="">Dashboard</a></li>
 			<li><a href="">Cadastro</a></li>
-			<li><a href="">Setores</a></li>
+			<li><a href="">Contas</a></li>
 		</ol>
 
 		<div class="row cabecalho">
 			<div class="col-xs-12 col-md-6">
-				<h1>Cadastro de Setores</h1>
+				<h1>Cadastro de Contas</h1>
 			</div>
 		</div>
 
@@ -30,7 +30,7 @@
 		
 		<div class="well">
 	
-			<form method="POST" th:action="@{/setor/cadastro}" th:object="${setorModel}" class="form-vertical  js-form-loading">
+			<form method="POST" th:action="@{/conta/cadastro}" th:object="${contaModel}" class="form-vertical  js-form-loading">
 			
 				<div id="mensagem" class="alert alert-danger hidden" role="alert"></div>
 			
@@ -39,7 +39,7 @@
 				<div class="row">
 					<div class="col-sm-2  form-group">
 						<label for="id">ID:</label> 
-						<input id="id" type="text" readonly="readonly" class="form-control" th:field="*{idSetor}"/>
+						<input id="id" type="text" readonly="readonly" class="form-control" th:field="*{idConta}"/>
 					</div>
 				</div>
 	
@@ -69,7 +69,7 @@
 				<div class="row">
 					<div class="form-group col-sm-12">
 						<button type="submit" class="btn btn-primary">Salvar</button>
-						<a class="btn btn-default" th:href="@{/setor}">Voltar</a>
+						<a class="btn btn-default" th:href="@{/conta}">Voltar</a>
 					</div>
 				</div>	
 							
