--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -75,6 +75,7 @@
 					<div class="form-group col-sm-3">
 						<label for="senha">Senha:</label>
 						<input type="password" id="senha" class="form-control" th:field="*{senha}" th:classappend="${#fields.hasErrors('senha')} ? has-error">
+						<label th:if="*{not novo}" style="color: red;">Informe somente se for alterar</label>
 					</div>
 
 					<div class="form-group col-sm-3">
