--- a/src/main/resources/templates/fornecedor/ListarFornecedor.html
+++ b/src/main/resources/templates/fornecedor/ListarFornecedor.html
@@ -10,20 +10,20 @@
 <section layout:fragment="corpo">
 
 	<div class="container">
-		<form method="GET" id="tabela-setores" th:object="${setorFilter}">
+		<form method="GET" id="tabela-fornecedor" th:object="${fornecedorFilter}">
 			<ol class="breadcrumb">
 				<li><a href="">Dashboard</a></li>
-				<li><a href="">Setores</a></li>
+				<li><a href="">Fornecedores</a></li>
 			</ol>
 	
 			<div class="row cabecalho">
 				<div class="col-xs-12 col-md-6">
-					<h1>Setores</h1>
+					<h1>Fornecedores</h1>
 				</div>
 				
 				<div class="col-xs-12 col-md-4 col-md-offset-2 busca">
 					<div class="input-group">
-						<input type="text" name="busca" class="form-control" placeholder="Pesquisar por descrição" th:field="*{descricao}"> 
+						<input type="text" name="busca" class="form-control" placeholder="Pesquisar por nome fantasia" th:field="*{nomeFantasia}"> 
 							<span class="input-group-btn">
 								<button type="submit" class="btn btn-default">
 									<span class="glyphicon glyphicon-search"></span>
@@ -42,11 +42,11 @@
 				<thead>
 					<tr>
 						<th>
-							<th:block th:replace="layout/fragments/Ordenacao :: orderComponent (${pagina}, 'idSetor', 'Código')"></th:block>
+							<th:block th:replace="layout/fragments/Ordenacao :: orderComponent (${pagina}, 'idFornecedor', 'Código')"></th:block>
 						</th>
 						
 						<th>
-							<th:block th:replace="layout/fragments/Ordenacao :: orderComponent (${pagina}, 'descricao', 'Setor')"></th:block>
+							<th:block th:replace="layout/fragments/Ordenacao :: orderComponent (${pagina}, 'nomeFantasia', 'Nome Fantasia')"></th:block>
 						</th>
 						
 						<th class="text-center">Ativo</th>
@@ -56,16 +56,16 @@
 
 				<tbody>
 					<tr th:each="setor : ${pagina.conteudo}">
-						<td th:text="${setor.idSetor}"></td>
-						<td th:text="${setor.descricao}"></td>
+						<td th:text="${fornecedor.idFornecedor}"></td>
+						<td th:text="${fornecedor.nomeFantasia}"></td>
 
 						<td class="text-center">
 							<a class="btn btn-link btn-xs js-btn-ativar-desativar" data-toggle="tooltip" data-placement="top" title="Ativar/Desativar" id="ativar-desativar"
-							 	data:url="@{/setor/{id}(id=${setor.idSetor})}" 
-							 	data:descricao="${setor.descricao}" 
-							 	data:status="${setor.ativo}"> 
+							 	data:url="@{/fornecedor/{id}(id=${fornecedor.idFornecedor})}" 
+							 	data:descricao="${fornecedor.nomeFantasia}" 
+							 	data:status="${fornecedor.ativo}"> 
 								<i class="glyphicon" 
-									th:classappend="${setor.ativo == T(agendafinanceira.models.enums.Ativo).ATIVO ? 'glyphicon-ok text-success' : 'glyphicon-remove text-danger'}">
+									th:classappend="${fornecedor.ativo == T(agendafinanceira.models.enums.Ativo).ATIVO ? 'glyphicon-ok text-success' : 'glyphicon-remove text-danger'}">
 								</i>
 							</a>
 						</td>
@@ -75,7 +75,7 @@
 								data-toggle="tooltip" 
 								data-placement="top" 
 								title="Alterar" 
-								th:href="@{/setor/cadastro/{id}(id=${setor.idSetor})}" > 
+								th:href="@{/fornecedor/cadastro/{id}(id=${fornecedor.idFornecedor})}" > 
 								<i class="glyphicon glyphicon-pencil"></i>
 							</a> 
 							
@@ -83,8 +83,8 @@
 								data-toggle="tooltip" 
 								data-placement="top" 
 								title="Excluir" href="#"
-							 	data:url="@{/setor/{id}(id=${setor.idSetor})}" 
-							 	data:descricao="${setor.descricao}"> 
+							 	data:url="@{/fornecedor/{id}(id=${fornecedor.idFornecedor})}" 
+							 	data:descricao="${fornecedor.nomeFantasia}"> 
 								<i class="glyphicon glyphicon-trash"></i>
 							</a>
 						</td>
@@ -102,7 +102,7 @@
 
 		<footer class="row">
 			<div class="col-sm-6">
-				<a class="btn btn-primary" th:href="@{/setor/cadastro}">Novo Setor</a>
+				<a class="btn btn-primary" th:href="@{/fornecedor/cadastro}">Novo Fonecedor</a>
 			</div>
 
 			
