--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -37,21 +37,21 @@
 			
 			
 				<div class="row">
-					<div class="form-group col-sm-2">
-						<label for="id">ID</label>
+					<div class="form-group col-sm-2" th:classappend="${#fields.hasErrors('idUsuario')} ? has-error">
+						<label for="id" class="control-label">ID</label>
 						<input type="text" readonly id="id" class="form-control" th:field="*{idUsuario}">
 					</div>
 				</div>
 				
 	
 				<div class="row">
-					<div class="form-group col-sm-6">
-						<label for="nome">Nome</label>
+					<div class="form-group col-sm-6" th:classappend="${#fields.hasErrors('nome')} ? has-error">
+						<label for="nome" class="control-label">Nome</label>
 						<input type="text" id="nome" class="form-control" th:field="*{nome}" th:classappend="${#fields.hasErrors('nome')} ? has-error">
 					</div>
 						
-					<div class="form-group col-sm-6">
-						<label for="email">Email</label>
+					<div class="form-group col-sm-6" th:classappend="${#fields.hasErrors('email')} ? has-error">
+						<label for="email" class="control-label">Email</label>
 						<input type="email" id="email" class="form-control" th:field="*{email}" th:classappend="${#fields.hasErrors('email')} ? has-error">
 					</div>
 						
@@ -59,27 +59,27 @@
 
 				
 				<div class="row">
-					<div class="form-group col-sm-3">
-						<label for="tipo">Credencial:</label>
+					<div class="form-group col-sm-3" th:classappend="${#fields.hasErrors('administrador')} ? has-error">
+						<label for="tipo" class="control-label">Credencial:</label>
 						<select id="tipo" class="form-control" th:field="*{administrador}" th:classappend="${#fields.hasErrors('administrador')} ? has-error">
 							<option value="">Selecione...</option>
 							<option th:each="credencial : ${credenciais}" th:value="${credencial}" th:text="${credencial.descricaoUsuario}"></option>
 						</select>
 		            </div>
 		            
-					<div class="form-group col-sm-3">
-						<label for="login">Login:</label>
-						<input type="text" id="login" class="form-control" th:field="*{login}" th:classappend="${#fields.hasErrors('login')} ? has-error">
+					<div class="form-group col-sm-3" th:classappend="${#fields.hasErrors('login')} ? has-error">
+						<label for="login" class="control-label">Login:</label>
+						<input type="text" id="login" class="form-control" th:field="*{login}">
 					</div>
 
-					<div class="form-group col-sm-3">
-						<label for="senha">Senha:</label>
-						<input type="password" id="senha" class="form-control" th:field="*{senha}" th:classappend="${#fields.hasErrors('senha')} ? has-error">
+					<div class="form-group col-sm-3" th:classappend="${#fields.hasErrors('senha')} ? has-error">
+						<label for="senha" class="control-label">Senha:</label>
+						<input type="password" id="senha" class="form-control" th:field="*{senha}">
 						<label th:if="*{not novo}" style="color: red;">Informe somente se for alterar</label>
 					</div>
 
-					<div class="form-group col-sm-3">
-						<label for="confirma-senha">Confirmar Senha:</label>
+					<div class="form-group col-sm-3" th:classappend="${#fields.hasErrors('confirmaSenha')} ? has-error">
+						<label for="confirma-senha" class="control-label">Confirmar Senha:</label>
 						<input type="password" id="confirma-senha" name="confirma-senha" class="form-control" th:field="*{confirmaSenha}">
 					</div>
 					
