--- a/src/main/resources/templates/fornecedor/CadastroFornecedor.html
+++ b/src/main/resources/templates/fornecedor/CadastroFornecedor.html
@@ -42,79 +42,43 @@
 						<input type="text" readonly id="id" class="form-control" th:field="*{idFornecedor}">
 					</div>
 					
-					<div class="form-group col-sm-4">
-					</div>
-					
-					
-					
-					
-				  <div class="form-group col-sm-3">
-					<label for="id" class="control-label">Pessoa Jurídica</label>
-				    <div class="input-group">
-				      <span class="input-group-addon">
-				        <input type="radio" name="pj_pf" aria-label="...">
-				      </span>
-				      <input type="text" class="form-control" placeholder="Digite o CNPJ" aria-label="...">
-				    </div><!-- /input-group -->
-				  </div><!-- /.col-lg-6 -->
-				  
-				  <div class="form-group col-sm-3">
-					<label for="id" class="control-label">Pessoa Física</label>
-				    <div class="input-group">
-				      <span class="input-group-addon">
-				        <input type="radio" name="pj_pf" aria-label="...">
-				      </span>
-				      <input type="text" class="form-control" placeholder="Digite o CPF" aria-label="...">
-				    </div><!-- /input-group -->
-				  </div><!-- /.col-lg-6 -->
-					
-					
-					
-					
+					 <div class="form-group col-sm-offset-4 col-sm-3">
+						<label for="id" class="control-label">Pessoa Jurídica</label>
+						   <div class="input-group">
+						     <span class="input-group-addon">
+						       <input type="radio" name="pj_pf" aria-label="...">
+						     </span>
+						     <input type="text" class="form-control" placeholder="Digite o CNPJ" aria-label="...">
+						   </div><!-- /input-group -->
+					 </div><!-- /.col-lg-6 -->
+						 
+					 <div class="form-group col-sm-3">
+						<label for="id" class="control-label">Pessoa Física</label>
+						   <div class="input-group">
+						     <span class="input-group-addon">
+						       <input type="radio" name="pj_pf" aria-label="...">
+						     </span>
+						     <input type="text" class="form-control" placeholder="Digite o CPF" aria-label="...">
+						   </div><!-- /input-group -->
+					 </div><!-- /.col-lg-6 -->
 					
 				</div>
 				
 	
 				<div class="row">
-					<div class="form-group col-sm-6" th:classappend="${#fields.hasErrors('nomeFantasia')} ? has-error">
+					<div class="form-group col-sm-12" th:classappend="${#fields.hasErrors('nomeFantasia')} ? has-error">
 						<label for="nome" class="control-label">Nome Fantasia</label>
 						<input type="text" id="nomeFantasia" class="form-control" th:field="*{nomeFantasia}" th:classappend="${#fields.hasErrors('nomeFantasia')} ? has-error">
 					</div>
-						
-					<div class="form-group col-sm-6" th:classappend="${#fields.hasErrors('razaoSocial')} ? has-error">
+				</div>
+
+				<div class="row">
+					<div class="form-group col-sm-12" th:classappend="${#fields.hasErrors('razaoSocial')} ? has-error">
 						<label for="email" class="control-label">Razão Social</label>
 						<input type="text" id="razaoSocial" class="form-control" th:field="*{razaoSocial}" th:classappend="${#fields.hasErrors('razaoSocial')} ? has-error">
 					</div>
-						
 				</div>
-
 				
-<!-- 				<div class="row"> -->
-<!-- 					<div class="form-group col-sm-3" th:classappend="${#fields.hasErrors('administrador')} ? has-error"> -->
-<!-- 						<label for="tipo" class="control-label">Credencial:</label> -->
-<!-- 						<select id="tipo" class="form-control" th:field="*{administrador}" th:classappend="${#fields.hasErrors('administrador')} ? has-error"> -->
-<!-- 							<option value="">Selecione...</option> -->
-<!-- 							<option th:each="credencial : ${credenciais}" th:value="${credencial}" th:text="${credencial.descricaoUsuario}"></option> -->
-<!-- 						</select> -->
-<!-- 		            </div> -->
-		            
-<!-- 					<div class="form-group col-sm-3" th:classappend="${#fields.hasErrors('login')} ? has-error"> -->
-<!-- 						<label for="login" class="control-label">Login:</label> -->
-<!-- 						<input type="text" id="login" class="form-control" th:field="*{login}"> -->
-<!-- 					</div> -->
-
-<!-- 					<div class="form-group col-sm-3" th:classappend="${#fields.hasErrors('senha')} ? has-error"> -->
-<!-- 						<label for="senha" class="control-label">Senha:</label> -->
-<!-- 						<input type="password" id="senha" class="form-control" th:field="*{senha}"> -->
-<!-- 						<label th:if="*{not novo}" style="color: red;">Informe somente se for alterar</label> -->
-<!-- 					</div> -->
-
-<!-- 					<div class="form-group col-sm-3" th:classappend="${#fields.hasErrors('confirmaSenha')} ? has-error"> -->
-<!-- 						<label for="confirma-senha" class="control-label">Confirmar Senha:</label> -->
-<!-- 						<input type="password" id="confirma-senha" name="confirma-senha" class="form-control" th:field="*{confirmaSenha}"> -->
-<!-- 					</div> -->
-					
-<!-- 				</div> -->
 				
 				<div class="row">
 					<input type="hidden" id="text-status" th:value="*{ativo}" th:name="ativo"/>
@@ -129,6 +93,70 @@
 							data-offstyle="danger"/>
 					</div>
 				</div>
+
+				
+				<fieldset>
+					<legend>Contatos:</legend>
+					<div class="table-responsive">
+						<table
+							class="table table-striped table-bordered table-hover">
+			
+							<thead>
+								<tr>
+									<th>Contato
+<!-- 										<th:block th:replace="layout/fragments/Ordenacao :: orderComponent (${pagina}, 'contato', 'Contato')"></th:block> -->
+									</th>
+									
+									<th>E-mail
+<!-- 										<th:block th:replace="layout/fragments/Ordenacao :: orderComponent (${pagina}, 'email', 'E-mail')"></th:block> -->
+									</th>
+									
+									<th class="text-center">Telefone</th>
+									<th class="text-center">Operações</th>
+								</tr>
+							</thead>
+			
+							<tbody>
+								<tr th:each="contato : ${contatos}">
+									<td th:text="${contato.contato}"></td>
+									<td th:text="${contato.email}"></td>
+									<td th:text="${contato.telefone1}"></td>
+			
+									<td class="text-center">
+										<a class="btn btn-link btn-xs" 
+											data-toggle="tooltip" 
+											data-placement="top" 
+											title="Alterar" 
+											th:href="@{/contato/cadastro/{id}(id=${contato.idContato})}" > 
+											<i class="glyphicon glyphicon-pencil"></i>
+										</a> 
+										
+										<a class="btn btn-link btn-xs js-btn-excluir" 
+											data-toggle="tooltip" 
+											data-placement="top" 
+											title="Excluir" href="#"
+										 	data:url="@{/contato/{id}(id=${contato.idContato})}" 
+										 	data:descricao="${contato.contato}"> 
+											<i class="glyphicon glyphicon-trash"></i>
+										</a>
+									</td>
+								</tr>
+			 					 
+<!-- 			 					<tr th:if="${contatos.isEmpty}"> -->
+<!-- 									<td colspan="4">Nenhum contato encontrado</td> -->
+<!-- 								</tr> -->
+								
+							</tbody>
+						</table>
+					</div>
+
+					<div class="row">
+						<div class="form-group col-sm-12">
+							<button class="btn btn-primary">Novo contato</button>
+						</div>
+					</div>					
+					
+				</fieldset>
 	
 				<div class="row">
 					<div class="form-group col-sm-12">
