--- a/src/main/resources/templates/fornecedor/ListarFornecedor.html
+++ b/src/main/resources/templates/fornecedor/ListarFornecedor.html
@@ -35,9 +35,9 @@
 		</form>
 
 
-		<div class="table-responsive  bw-tabela-simples">
+		<div class="table-responsive">
 			<table
-				class="dados-os table table-striped table-bordered table-hover">
+				class="table table-striped table-bordered table-hover">
 
 				<thead>
 					<tr>
@@ -46,7 +46,7 @@
 						</th>
 						
 						<th>
-							<th:block th:replace="layout/fragments/Ordenacao :: orderComponent (${pagina}, 'nomeFantasia', 'Nome Fantasia')"></th:block>
+							<th:block th:replace="layout/fragments/Ordenacao :: orderComponent (${pagina}, 'nomeFantasia', 'Nome/Razão Social')"></th:block>
 						</th>
 						
 						<th class="text-center">Ativo</th>
@@ -55,7 +55,7 @@
 				</thead>
 
 				<tbody>
-					<tr th:each="setor : ${pagina.conteudo}">
+					<tr th:each="fornecedor : ${pagina.conteudo}">
 						<td th:text="${fornecedor.idFornecedor}"></td>
 						<td th:text="${fornecedor.nomeFantasia}"></td>
 
