--- a/src/main/resources/templates/fornecedor/ListarFornecedor.html
+++ b/src/main/resources/templates/fornecedor/ListarFornecedor.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<form method="GET" id="tabela-fornecedor" th:object="${fornecedorFilter}">
 			<ol class="breadcrumb">
-				<li><a href="">Dashboard</a></li>
+				<li><a th:href="@{/}">Dashboard</a></li>
 				<li><a href="">Fornecedores</a></li>
 			</ol>
 	
