Exclusão do contato

--- a/src/main/resources/templates/fornecedor/CadastroFornecedor.html
+++ b/src/main/resources/templates/fornecedor/CadastroFornecedor.html
@@ -120,7 +120,7 @@
 											data-toggle="tooltip" 
 											data-placement="top" 
 											title="Excluir" href="#"
-										 	data:url="@{/contato/{id}(id=${contato.idContato})}" 
+										 	data:url="@{/fornecedor/contato/{id}(id=${contato.idContato})}" 
 										 	data:descricao="${contato.contato}"> 
 											<i class="glyphicon glyphicon-trash"></i>
 										</a>
