--- a/src/main/resources/templates/fornecedor/ListarFornecedor.html
+++ b/src/main/resources/templates/fornecedor/ListarFornecedor.html
@@ -37,7 +37,7 @@
 
 		<div class="table-responsive">
 			<table
-				class="table table-striped table-bordered table-hover">
+				class="dados-os table table-striped table-bordered table-hover">
 
 				<thead>
 					<tr>
